--- a/package.json
+++ b/package.json
@@ -17,17 +17,22 @@
     "@tabler/icons-react": "^3.12.0",
     "base64-img": "^1.0.1",
     "chart.js": "^4.4.3",
+    "embla-carousel-react": "^7.1.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.13.0",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.24.1",
-    "sass": "^1.77.8"
+    "react-slick": "^0.30.2",
+    "sass": "^1.77.8",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^22.3.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
