--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
     "@mantine/hooks": "^7.11.2",
     "@mantinex/mantine-logo": "^1.0.1",
     "@tabler/icons-react": "^3.12.0",
+    "apexcharts": "^3.52.0",
     "base64-img": "^1.0.1",
-    "chart.js": "^4.4.3",
+    "chart.js": "^4.4.4",
     "embla-carousel-react": "^7.1.0",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.13.0",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.24.1",
     "react-slick": "^0.30.2",
+    "recharts": "^2.12.7",
     "sass": "^1.77.8",
     "slick-carousel": "^1.8.1"
   },
