--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/core": "^7.11.2",
     "@mantine/hooks": "^7.11.2",
     "@mantinex/mantine-logo": "^1.0.1",
+    "@mui/x-charts": "^7.14.0",
     "@tabler/icons-react": "^3.12.0",
     "apexcharts": "^3.52.0",
     "base64-img": "^1.0.1",
