--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mantine/carousel": "^7.12.1",
     "@mantine/core": "^7.11.2",
     "@mantine/hooks": "^7.11.2",
@@ -22,6 +25,7 @@
     "embla-carousel-react": "^7.1.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
+    "react-burger-menu": "^3.0.9",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.13.0",
@@ -35,6 +39,7 @@
   "devDependencies": {
     "@types/node": "^22.3.0",
     "@types/react": "^18.3.3",
+    "@types/react-burger-menu": "^2.8.7",
     "@types/react-dom": "^18.3.0",
     "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
