--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.13.0",
+    "react-modal": "^3.16.1",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.24.1",
     "react-slick": "^0.30.2",
@@ -41,6 +42,7 @@
     "@types/react": "^18.3.3",
     "@types/react-burger-menu": "^2.8.7",
     "@types/react-dom": "^18.3.0",
+    "@types/react-modal": "^3.16.3",
     "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
